--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -4,16 +4,23 @@
 .accordion__section {
   display: flex;
   flex-direction: column;
+  justify-content: right;
+  margin-left: auto;
+  width: 90%;
 }
+
+
+ 
+
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
+  background-color: rgb(255, 255, 255);
   color: #444;
   cursor: pointer;
   padding: 18px;
   display: flex;
-  align-items: center;
+  justify-items: flex-end;
   border: none;
   outline: none;
   transition: background-color 0.6s ease;
@@ -58,3 +65,4 @@
   font-size: 12px;
   padding: 18px;
 }
+
