--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -15,8 +15,10 @@
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: rgb(255, 255, 255);
-  color: #444;
+  border-top: solid 1px;
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  color: rgb(255, 255, 255);
   cursor: pointer;
   padding: 18px;
   display: flex;
@@ -29,7 +31,7 @@
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .accordion:hover,
 .active {
-  background-color: #ccc;
+  background-color: rgb(164, 164, 164);
 }
 
 /* Style the accordion content title */
