--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
 
+
 /* Style the accordion section */
 .accordion__section {
   display: flex;
@@ -7,16 +8,16 @@
   justify-content: right;
   margin-left: auto;
   width: 90%;
-}
-
-
  
+  
+}
 
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
+  
   border-top: solid 1px;
-  background-color: rgba(255, 255, 255, .15);  
+  background-color: rgba(255, 255, 255, 0.15);  
   backdrop-filter: blur(5px);
   color: rgb(255, 255, 255);
   cursor: pointer;
@@ -31,7 +32,7 @@
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .accordion:hover,
 .active {
-  background-color: rgba(164, 164, 164, 0.678);
+  background-color: rgba(255, 255, 255, 0.467);
 }
 
 /* Style the accordion content title */
@@ -55,8 +56,9 @@
 
 /* Style the accordion content panel. Note: hidden by default */
 .accordion__content {
-  background-color: rgba(29, 67, 32, 0.15);  
-  backdrop-filter: blur(7px);
+  background-color: rgba(74, 112, 84, 0.469);
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
   color: white;
   overflow: auto;
   transition: max-height 0.6s ease;
@@ -70,4 +72,5 @@
  
   padding: 18px;
 }
+
 
