--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosario:wght@600&display=swap');
 *{
   margin: 0;
 }
@@ -89,7 +90,9 @@ height: 1.8em;
   display: inline-flex;
 }
 
-
+button:focus{
+  outline: none;
+}
 
 
 @media only screen and (max-width: 600px)  {
@@ -151,7 +154,7 @@ height: 1.8em;
 }
 
 .line{
-  width: 22em;
+  width: 21em;
   margin-right: 1em;
   margin-left: 1em;
 }
@@ -191,15 +194,19 @@ button:active {
   border: none;
 }
 .header-modal{
+  
+  
   display: flex;
-  padding: 8.5px;
+  padding: 6.5px;
  text-align: center;
- 
 }
 
+
 h4{
+  padding-top: 2px;
   padding-left: 10px;
   color: var(--green);
+  vertical-align:middle;
 }
 
 .close-modal{
@@ -212,6 +219,11 @@ h4{
     cursor: pointer;
     border: 1.5px solid var(--green);
     font-weight: 900;
+    vertical-align:middle;
+}
+
+.close-modal:hover{
+  background-color: var(--green);
 }
 
 
@@ -226,7 +238,7 @@ path {
   display: inline-flex;
   width: 60%;
   position: absolute;
-  top: 28%;
+  top: 29%;
   left: 34%;
   justify-content: space-between;
   transform: translate(-50%, );
@@ -239,7 +251,7 @@ path {
 .leaf {
   
   visibility: hidden;
-  width: 100px;
+  width: 80px;
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   animation: dash 4s linear alternate infinite;
@@ -247,6 +259,9 @@ path {
 }
 
 .svg2 {
+  position: absolute;
+  top: 150%;
+  left: 45%;
   visibility: hidden;
   width: 100px;
   stroke-dasharray: 1000;
@@ -257,7 +272,7 @@ path {
 
 .svg3 {
   visibility: hidden;
-  width: 100px;
+  width: 70px;
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   animation: dash 4s linear alternate infinite;
@@ -282,6 +297,13 @@ path {
   width: 88%;
   text-align: center;
   display: inline-flex;
+  visibility: hidden;
+
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
  
 }
 
@@ -294,8 +316,7 @@ path {
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   outline: none; 
-  filter: drop-shadow(0px 7.2px 7.2px rgba(0, 0, 0, 0.25));
-  
+ 
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
   -moz-animation: fadeIn ease 2s;
@@ -318,7 +339,7 @@ path {
 }
 
 .modal-second{
- transform: translate(200%, 180%);
+ transform: translate(200%, 1000%);
 }
 
 
@@ -385,19 +406,46 @@ path {
   z-index: 999;
   top: 0;
   right: 0;
-  background-color: white;
-
-  overflow-x: hidden;
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(6px);
+  color: rgb(28, 31, 29);
+text-align: left;
   transition: 0.5s;
+  font-family: 'Rosario', sans-serif;
+}
+
+.sidebar-p{
+  color: rgb(39, 39, 39);
+}
+
+.sidebar-filter::before{
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(6px);
+}
+
+ .text{
+  font-size: 1.1em;
   font-family: 'Roboto', sans-serif;
-  color: #c6c6c6; 
-  
+  text-align: left;
+  margin-left: 20px;
+  color: rgb(72, 77, 72); 
+}
+.h4-sidebar{
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  color: rgb(72, 77, 72); 
+  padding-top: 20px;
+  text-align: left;
+  margin-left: 13px;
 }
 .h3-sidebar{
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   color: #243F36; 
-  padding: 20px;
+  padding-bottom: 20px;
+  margin-left: 20px;
+  text-align: left;
+  
 }
 
 .image{
@@ -405,29 +453,12 @@ path {
  margin: 20px;
  width: 212px;
  height: 245px;
- background-color: yellow;
 }
 
-.closeButton{
-  border: none;
-  background-color: white;
-  color: #434343;
-  font-size: 2em;
-  display: flex;
-  cursor: pointer;
-  padding-left: 25px;
-}
+
 
 .openButton{
-  position: absolute;
-  top: 80%;
-  left: 42%;
-  transform: translate(-50%, );
-  text-align: center;
-  display: inline-flex;
-
-  visibility: hidden;
-  transform: translateY(100%);
+  
   border: none;
   border-radius: 50%;
   width: 22px;
@@ -462,16 +493,252 @@ h1 span{
   font-size: .9rem;
   padding: 1em;
   line-height: 1.5;
-  
+}
+
+.close-sidebar{
+    margin-left: 20px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0);
+    color: var(--green);
+    cursor: pointer;
+    border: 1.5px solid var(--green);
+    font-weight: 900;
+    margin-top: 20px;
+    
+}
+
+.close-info{
+  margin-bottom: 20px;
+  border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0);
+    color: var(--yellow);
+    cursor: pointer;
+    border: 1.5px solid var(--yellow);
+    font-weight: 900;
+}
+
+.close-info:hover{
+  background-color:var(--yellow);
 }
 
 .dottedLine1{
   position: absolute;
   top: 58%;
-  left: 36%;
+  left: 37%;
   transform: translate(-50%, );
   text-align: center;
   display: inline-flex;
   visibility: hidden;
   width: 100px;
+}
+
+.dottedLine2{
+  position: absolute;
+  top: 28%;
+  left: 61%;
+  transform: translate(-50%, );
+  text-align: center;
+  display: inline-flex;
+  visibility: hidden;
+  width: 53px;
+}
+
+.dottedLine3{
+  position: absolute;
+  top: 58%;
+  left: 86%;
+  transform: translate(-50%, );
+  text-align: center;
+  display: inline-flex;
+  visibility: hidden;
+  width: 80px;
+}
+
+
+#sideOne{
+  position: absolute;
+  top: 78%;
+  left: 43%;
+  transform: translate(-50%, );
+  text-align: center;
+  display: inline-flex;
+
+  visibility: hidden;
+  transform: translateY(100%);
+}
+
+
+
+#sideTwo{
+  position: absolute;
+  top: 20%;
+  left: 60%;
+  transform: translate(-50%, );
+  text-align: center;
+  display: inline-flex;
+  visibility: hidden;
+  transform: translateY(100%);
+}
+
+
+
+#sideThree{
+  position: absolute;
+  top: 73%;
+  left: 84%;
+  transform: translate(-50%, );
+  text-align: center;
+  display: inline-flex;
+  visibility: hidden;
+  transform: translateY(100%);
+}
+
+.suggestion{
+  position: absolute;
+  top: 83%;
+  left: 0%;
+  transform: translate(-50%, );
+  margin-left: 3em;
+  vertical-align:middle;
+  color: white;
+  display: flex;
+  align-items:center;
+  cursor: pointer;
+}
+
+.suggestion p {
+  font-size: .8rem;
+}
+
+.legend{
+  width: 100%;
+  position: absolute;
+  top: 90%;
+  left: 0%;
+  transform: translate(-50%, );
+  margin-left: 3em;
+  vertical-align:middle;
+  color: white;
+  display: flex;
+  align-items:center;
+  cursor: pointer;
+}
+
+.legend p {
+  font-size: .8rem;
+}
+
+
+.legendInfo{
+  margin-right: .5em;
+  vertical-align:middle;
+  width: 30px;
+}
+
+.modalInfo{
+  width: 360px;
+  height: 300px;
+  color: #ffffff;
+  transform: translate(25%, 85%);
+  font-family: 'Roboto', sans-serif;
+  outline: none; 
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(7px);
+  padding: 20px;
+  
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+}
+
+.infoText{
+  font-size: .7rem;
+ 
+}
+
+.infoTextMain{
+  display: flex;
+}
+
+#my-sidebar{
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(7px);
+}
+
+.form{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+border: none;
+width: 247px;
+font-family: 'Roboto', sans-serif;
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+}
+
+.submit-name , .submit-footstep , .submit-area {
+  border-radius: 4px;
+  border: none;
+  margin-bottom: 7px;
+  font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  padding: 4px;
+ 
+}
+
+textarea {
+  resize: none;
+}
+.submit-button{
+  background-color: rgba(214, 214, 214, 0);
+  color: white;
+  border: 0.822943px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 30.4489px;
+  font-family: 'Montserrat', sans-serif;
+  align-self: center;
+  width:30%;
+  margin-top: 5px;
+} 
+.submit-footstep{
+  width: 104%;
+  padding: 2px;
+  margin-bottom: 13px;
+  color: rgb(114, 114, 114); 
+}
+input:focus{
+  outline: none;
+}
+textarea:focus{
+  outline: none;
+}
+
+select:focus{
+  outline: none;
+}
+
+.submit-label{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.8em;
+  margin-bottom: 2px;
+  padding: 2px;
+}
+
+.goals{
+  padding-left: 5px;
+  width: 25px;
+  
+}
+
+.goals-main{
+  flex: 1 0 0%;
+  text-align: right;
+
 }
